--- a/css/styles.css
+++ b/css/styles.css
@@ -1,60 +1,40 @@
 body{
-	background-image: url('../imagens/fundo.png');
-	width: 50%;
+	background: #d2d2c1 url('../imagens/fundo.png');
+	font: 16px Arial, Helvetica, sans-serif;
 }
 
 a{
-	font-family: "Arial", sans-serif;
-	color: #555857;
+	color: #4b566a;
 	font-weight: bold;
 	text-decoration: none;	
-	vertical-align: middle;	
+	padding: 5px;
 }
 
-p{
-	font-family: "Arial", sans-serif;
-}
-
-.subtitulo{
-	font-family: "Arial", sans-serif;
-	color: #828373;
-	font-size: 1.5em;
+h1{
+	color: #828271;
+	font-size: 1.2em;
 }
 
 .photos{
-	border: solid 10px #D3D5BD ;
+	border: solid 10px #c3c3ae ;
 }
 
-#header{
-	margin: 0px;
+#main{
+	width: 900px;
 }
 
 #menu{
-	height: 70px;
-	background: #D3D5BD;	
-	margin: 0px;
-	vertical-align: middle;
-}
-
-#photo-capa{
-	width: 100%;
+	background: #c5c5b2;	
+	padding: 25px 18px 22px 10px;
 }
 
 #contents{
-	background: #FCFCEC;
+	background: #e8e8d9;
 	padding: 10px;
-	margin: 0px;
 }
 
-#footer{
+.text-center{
 	text-align: center;
-	font-weight: bold;
-	font-family: "Arial", sans-serif;
-	margin-top: 20px;
-}
-
-#contactcard{
-	font-family: "Arial", sans-serif;
 }
 
 
